--- a/xplorelagos/core/templates/Dashboard2.html
+++ b/xplorelagos/core/templates/Dashboard2.html
@@ -75,18 +75,27 @@
             <h2>Summary</h2>
             <div class="user-info">
                 <h3>User Information</h3>
-                <p>Name: <span id="userName"></span></p>
-                <p>Email: <span id="userEmail"></span></p>
+                <p>Name: <span id="userName">{{ user_name }}</span></p>
+                <p>Email: <span id="userEmail">{{ user_email }}</span></p>
             </div>
             <div class="user-info">
                 <h3>Date and Time</h3>
-                <p>Date: <span id="date"></span></p>
-                <p>Arrival time: <span id="time"></span></p>
-            </div>
-            <div class="selected-activities">
+                  <p>Date: <span id="date"> {{selected_date}}</span></p>
+                  <p>Arrival time: <span id="time"> From: {{selected_startTime}} To: {{selected_endTime}}</span></p>
+              </div>
+              <div class="selected-activities">
                 <h3>Selected Activities</h3>
-                <ul id="selectedActivities"></ul>
-            </div>
+                {{selected_noPeople}} person/people heading from {{selected_location}}  to:
+        
+                <ul style="display: flex; flex: column" id="selectedActivities">
+                  {% for option in selected_options %}
+                    <li style="color: black; font-size: smaller;">Name: {{ option.name }}</li>
+                    <li style="color: black; font-size: smaller;">Price: {{ option.price }}</li>
+        
+                  {% endfor %}
+                </ul>
+                
+              </div>
             <div class="payment-options" style="color: rgb(61, 223, 83); text-align: center; margin-top: 90px;">
                 <h1>Paid</h1>
     </div>
