fix: the tour info hardcode

--- a/xplorelagos/core/templates/Dashboard2.html
+++ b/xplorelagos/core/templates/Dashboard2.html
@@ -40,32 +40,32 @@
                     <h2>Tour Guide Information</h2>
                     <div class="detail">
                         <label for="guideName">Name:</label>
-                        <span id="guideName"></span>
+                        <span id="guideName"> Adeleke Usman</span>
                     </div>
                     <div class="detail">
                         <label for="gender">Gender:</label>
-                        <span id="gender"></span>
+                        <span id="gender">Male</span>
                     </div>
                     <div class="detail">
                         <label for="phoneNumber">Phone number:</label>
-                        <span id="phoneNumber"></span>
+                        <span id="phoneNumber">+234 8089234456</span>
                     </div>
                     <h2>Vehicle Details</h2>
                     <div class="detail">
                         <label for="vehicleName">Name:</label>
-                        <span id="vehicleName"></span>
+                        <span id="vehicleName">Ford</span>
                     </div>
                     <div class="detail">
                         <label for="color">Color:</label>
-                        <span id="color"></span>
+                        <span id="color">Red</span>
                     </div>
                     <div class="detail">
                         <label for="numberPlate">Number Plate:</label>
-                        <span id="numberPlate"></span>
+                        <span id="numberPlate">EH 345 LSR</span>
                     </div>
                     <div class="detail">
                         <label for="arrivalTime">Estimated Time of Arrival:</label>
-                        <span id="arrivalTime"></span>
+                        <span id="arrivalTime">40 mins</span>
                     </div>
                 </div>
             </div> 
