--- a/xplorelagos/core/templates/Dashboard2.html
+++ b/xplorelagos/core/templates/Dashboard2.html
@@ -90,7 +90,7 @@
                 <ul style="display: flex; flex: column" id="selectedActivities">
                   {% for option in selected_options %}
                     <li style="color: black; font-size: smaller;">Name: {{ option.name }}</li>
-                    <li style="color: black; font-size: smaller;">Price: {{ option.price }}</li>
+                    <li style="color: black; font-size: smaller;">Price: ${{ option.price }}</li>
         
                   {% endfor %}
                 </ul>
