--- a/xplorelagos/core/templates/Dashboard.html
+++ b/xplorelagos/core/templates/Dashboard.html
@@ -52,11 +52,12 @@
         <h3>Selected Activities</h3>
         {{selected_noPeople}} person/people heading 
         <br>
-        from:
+        <br>
+        <strong>from:</strong>
         <br>
          {{selected_location}}
         <br>
-        to:
+        <strong>to:</strong>
 
         <ul style="display: flex; flex: column" id="selectedActivities">
           {% for option in selected_options %}
