--- a/xplorelagos/core/templates/Dashboard.html
+++ b/xplorelagos/core/templates/Dashboard.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
   </div>
-  <p class="expereience_Text">Dashboad</p>
+  <p class="expereience_Text">Dashboard</p>
   <hr>
   <div class="container">
     <div class="picture_part"></div>
